--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -203,6 +203,8 @@ ja:
       user:
         name: 'お名前'
         email: 'メールアドレス'
+        handle_name: 'ハンドルネーム'
+        twitter_id: 'Twetter アカウント'
         password: 'パスワード'
         password_confirmation: '確認用メールアドレス'
         current_password: '現在のパスワード'
@@ -216,4 +218,5 @@ ja:
         plan_appeal_point: '企画上のアピールポイント'
         remarks: '自由記入欄'
         published: '公開/非公開'
+        file: '添付ファイル'
 
