add handle_name and twitter_id to work

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -219,4 +219,6 @@ ja:
         remarks: '自由記入欄'
         published: '公開/非公開'
         file: '添付ファイル'
+        handle_name: 'ハンドルネーム'
+        twitter_id: 'Twetter アカウント'
 
