--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -210,7 +210,7 @@ ja:
         handle_name: 'ハンドルネーム'
         twitter_id: 'Twitter アカウント'
         password: 'パスワード'
-        password_confirmation: '確認用メールアドレス'
+        password_confirmation: '確認用パスワード'
         current_password: '現在のパスワード'
       work:
         title: '作品タイトル'
